Update to 1.19.4 [build] [publish]